--- a/styles.css
+++ b/styles.css
@@ -9,28 +9,36 @@ body{
     min-height: 100vh;
     background-image: url(./imgs/nubes.jpg);
     background-attachment: fixed;
+    
 }
 
 .contenido{
     width: 90vw;
     min-height: 100vh;
     margin: 2em 1.5em;
-
+ 
+    
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 30px;
     text-align: center;
+    padding-bottom: 5em;
 }
 
 .title{
+    color:  rgb(104, 226, 104);
+    background-image: linear-gradient(rgb(73, 75, 138),rgb(0, 0, 0));
+    height: 2em;
+   
+}
+.title2{
     height: 4em;
     text-align: center;
     color: rgb(104, 226, 104);
     background-image: linear-gradient(rgb(73, 75, 138),rgb(0, 0, 0));
     line-height: 1.2em;
     margin: auto;
-}
-.title2{
+    
     line-height: 3em;
 }
 
@@ -39,12 +47,46 @@ body{
     color: rgb(255, 213, 0);
     box-shadow: 2px 2px 2px  black;
 }
+.voto{
+    font-size: 2em;
+    color:rgb(255, 213, 0);
+}
 
 
 .cartel img{
     width: 200px;
     height: 250px;
     
+}
+@media(max-width:900px) {
+    .cartel img{
+        width: 140px;
+        height: 170px;
+    }
+    .title{
+        font-size: 10px;
+    }
+
+}
+@media(max-width:675px) {
+    .cartel img{
+        width: 100px;
+        height: 130px;
+    }
+
+}
+@media(max-width:525px) {
+    .cartel img{
+        width: 65px;
+        height: 80px;
+    }
+
+}@media(max-width:375px) {
+    .cartel img{
+        width: 30px;
+        height: 45px;
+    }
+
 }
 
 
